Fixed margin broken in rev 766. When Mason was parsing the stylesheet, it caused the browser to ignore the first CSS entry, which was the body block. Now that Mason isn't parsing the stylesheet, the browser is reading the body block, which had the width specified as 85%.

--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -21,7 +21,6 @@ body, #content {
 */
 
 body {
-    width: 85%;
     padding: 0;
     background-color: #FFFFFF;
     color: #000000;
